--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,18 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<!-- Enable preview features-->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<release>15</release>
+					<compilerArgs>--enable-preview</compilerArgs>
+					<source>15</source>
+					<target>15</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
